# cotype

./: .gitignore  CHANGELOG.md  LICENSE  PRD.md  README.md  SPEC.md
.claude/: settings.local.json
.github/workflows/: publish.yml  test.yml
cli/: README.md  pyproject.toml
cli/cotype/: __init__.py  __main__.py  atomic_write.py  cli.py  errors.py  hash.py  lock.py  merge.py  paths.py  store.py
cli/cotype/commands/: __init__.py  catbase.py  init.py  open_.py  resolve.py  save.py  status.py
cli/stile/: __init__.py  __main__.py  cli.py  errors.py  paths.py  store.py
cli/stile/commands/: init.py  resolve.py  save.py
cli/tests/: conftest.py  test_T10_atomicity.py  test_atomic_write.py  test_catbase.py  test_cli.py  test_examples_agent_loop.py  test_examples_demo.py  test_examples_twitter_demo.py  test_hash.py  test_init.py  test_lock.py  test_merge.py  test_open.py  test_paths.py  test_properties.py  test_resolve.py  test_save.py  test_save_conflict.py  test_save_merge.py  test_security.py  test_status.py  test_store.py
editors/emacs/: README.md  cotype.el  stile.el
editors/vim/: README.md
editors/vim/plugin/: cotype.vim
examples/: headless-agents.sh
examples/agent-loop/: README.md  agent_mock.py  run_agent.py
examples/demo/: README.md  bg-agent.py  bg-claude.py  bg-puppeteer.py  bg-viewer.sh  demo-claude.sh  demo-claude.tape  demo-init.el  demo.sh  demo.tape  orchestrate.py  setup-claude.sh  setup.sh  simple-demo.sh  simple-demo.tape
examples/demo-crepe/: bg-user.py  demo-init.el  demo.sh  demo.tape  setup.sh
examples/demo-crepe-nvim/: bg-user.py  demo-init.vim  demo.sh  demo.tape  setup.sh
examples/emacs/: README.md  stile.el
examples/twitter-demo/: README.md  bg-agent.py  bg-claude.py  bg-puppeteer.py  bg-viewer.sh  demo-claude.sh  demo-claude.tape  demo-init.el  demo-step.sh  demo.sh  demo.tape  setup-claude.sh  setup.sh  simple-demo.sh  simple-demo.tape
examples/twitter-demo/agents/: linter.py  reviewer.py  tester.py
kb/: GLOSSARY.md  INDEX.md
kb/architecture/: overview.md
kb/architecture/decisions/: 0001-python-stdlib-only.md  0002-diff3-for-merge.md  0003-sidecar-flock.md
kb/conventions/: code-style.md  error-handling.md  testing-strategy.md
kb/domain/: prd.md
kb/indexes/: by-task.md
kb/properties/: INDEX.md  edge-cases.md  functional.md  non-functional.md
kb/runbooks/: audit-checklist.md
kb/spec/: INDEX.md  algorithms.md  api-contracts.md  config-and-formats.md  data-model.md  error-taxonomy.md  protocols.md
stile/: __init__.py  atomic_write.py  cli.py  errors.py  hash.py  lock.py  merge.py  paths.py
stile/commands/: __init__.py  catbase.py  open_.py  resolve.py  save.py  status.py
tests/: test_T10_atomicity.py  test_catbase.py  test_cli.py  test_examples_agent_loop.py  test_init.py  test_lock.py  test_merge.py  test_paths.py  test_resolve.py  test_save_merge.py  test_security.py  test_status.py
