[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stile"
version = "0.1.0"
description = "Universal safe-save for concurrent text files"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "stile contributors"}]
readme = "README.md"

[project.scripts]
stile = "stile.cli:main"

[tool.setuptools.packages.find]
include = ["stile*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
