[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cotype"
version = "0.2.3"
description = "Universal safe-save for concurrent text files — let a user and one or more AI agents edit the same file together without lost updates."
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Yann Régis-Gianas", email = "yann@regis-gianas.org"}]
readme = "README.md"
keywords = ["text", "file", "safe-save", "concurrent", "merge", "diff3", "agents", "llm", "collaboration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control",
    "Topic :: Text Processing",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.urls]
Homepage      = "https://github.com/yurug/cotype"
Repository    = "https://github.com/yurug/cotype"
Issues        = "https://github.com/yurug/cotype/issues"
Changelog     = "https://github.com/yurug/cotype/blob/main/CHANGELOG.md"
Documentation = "https://github.com/yurug/cotype/tree/main/kb"

[project.scripts]
cotype = "cotype.cli:main"

[tool.setuptools.packages.find]
include = ["cotype*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
